feat: switch to daisy ui and add sidebar example

--- a/crates/hayride-ui/index.html
+++ b/crates/hayride-ui/index.html
@@ -1,28 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="retro"></html>
   <head>
-    <meta charset="utf-8">
-    <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <link rel="canonical" href="https://preline.co/">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Chat Application AI Prompt using Tailwind CSS for Preline UI, a product of Htmlstream.">
-
-    <meta name="twitter:site" content="@preline">
-    <meta name="twitter:creator" content="@preline">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Chat Application AI Prompt using Tailwind CSS | Preline UI, crafted with Tailwind CSS">
-    <meta name="twitter:description" content="Chat Application AI Prompt using Tailwind CSS for Preline UI, a product of Htmlstream.">
-    <meta name="twitter:image" content="https://preline.co/assets/img/og-image.png">
-
-    <meta property="og:url" content="https://preline.co/">
-    <meta property="og:locale" content="en_US">
-    <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Preline">
-    <meta property="og:title" content="Chat Application AI Prompt using Tailwind CSS | Preline UI, crafted with Tailwind CSS">
-    <meta property="og:description" content="Chat Application AI Prompt using Tailwind CSS for Preline UI, a product of Htmlstream.">
-    <meta property="og:image" content="https://preline.co/assets/img/og-image.png">
-
-
     <!-- Title -->
     <title>Hayride AI Chat Prompt</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -34,11 +12,9 @@
     <!-- Add a plain CSS file: see https://trunkrs.dev/assets/#css -->
     <!-- If using Tailwind with Leptos CSR, see https://trunkrs.dev/assets/#tailwind instead-->
   <link data-trunk rel="tailwind-css" href="style/input.css" />
-   <!--<link rel="stylesheet" href="https://preline.co/assets/css/main.min.css">-->
-  </head>
 
-  <body class="dark:bg-neutral-900">
+  </head>
+	<body>
     <!-- MOUNT LOCATION -->
-    <script data-trunk src="node_modules/preline/dist/preline.js"></script>
   </body>
 </html>
