feat: add avatar, update sidebar and add fonts

--- a/crates/hayride-ui/index.html
+++ b/crates/hayride-ui/index.html
@@ -4,6 +4,8 @@
     <!-- Title -->
     <title>Hayride AI Chat Prompt</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand:wght@400;500;600;700&display=swap" rel="stylesheet">
+
     <!-- Include favicon in dist output: see https://trunkrs.dev/assets/#icon 
     <link data-trunk rel="icon" href="public/favicon.ico" />-->
 
