feat: update styling and example nav, add drawer for config

--- a/crates/hayride-ui/index.html
+++ b/crates/hayride-ui/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html data-theme="retro"></html>
+<html data-theme="custom"></html>
   <head>
     <!-- Title -->
-    <title>Hayride AI Chat Prompt</title>
+    <title>AI Chat Prompt</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand:wght@400;500;600;700&display=swap" rel="stylesheet">
 
@@ -14,7 +14,7 @@
     <!-- Add a plain CSS file: see https://trunkrs.dev/assets/#css -->
     <!-- If using Tailwind with Leptos CSR, see https://trunkrs.dev/assets/#tailwind instead-->
   <link data-trunk rel="tailwind-css" href="style/input.css" />
-
+  <link data-trunk rel="copy-dir" href="public/"/>
   </head>
 	<body>
     <!-- MOUNT LOCATION -->
